# habot

./: README.md
bot/Habot/: .gitignore  Habot.botproj  Habot.dialog  package-lock.json  package.json
bot/Habot/dialogs/CheckHabits/: CheckHabits.dialog
bot/Habot/dialogs/CheckIn/: CheckIn.dialog
bot/Habot/dialogs/EndSession/: EndSession.dialog
bot/Habot/dialogs/Help/: Help.dialog
bot/Habot/dialogs/Initialize/: Initialize.dialog
bot/Habot/dialogs/NewHabit/: NewHabit.dialog
bot/Habot/dialogs/NoHabit/: NoHabit.dialog
bot/Habot/dialogs/QuitHabit/: QuitHabit.dialog
bot/Habot/dialogs/ReviewHabit/: ReviewHabit.dialog
bot/Habot/dialogs/StartingTips/: StartingTips.dialog
bot/Habot/dialogs/WelcomeBack/: WelcomeBack.dialog
bot/Habot/dialogs/WelcomeUser/: WelcomeUser.dialog
bot/Habot/recognizers/: Habot.en-us.lu.dialog  Habot.lu.dialog  Habot.lu.qna.dialog
habot-vue/: .gitignore  Dockerfile  README.md  build.sh  package-lock.json  package.json  sample.html
habot-vue/public/: index.html
habot-vue/src/: App.vue  CustomTokenProvider.js  index.js  main.js
habot-vue/src/components/: Chat.vue  HelloWorld.vue  Home.vue  header-bar-brand.vue  header-bar-links.vue  header-bar.vue
habot-vue/src/router/: index.js
habot-vue/src/store/: index.js
habot-vue/src/styles/: _variables.scss  index.scss
habot-vue/src/views/: Coach.vue  Home.vue  Progress.vue
rusty-habots/: Cargo.toml  Dockerfile
rusty-habots/src/: main.rs  model.rs  routes.rs
rusty-habots/src/data/: mod.rs
rusty-habots/src/routes/: habits.rs  metrics.rs  mod.rs  users.rs
(+38 files in other folders)
