[package]
name = "rusty-habots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
log = "0.4.14"
uuid = "0.8.2"
serde_json = "1.0.79"
chrono = "0.4.19"
urlencoding = "2.1.0"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]

[dependencies.serde]
version = "1.0.136"

[dependencies.bson]
version = "2.1.0"
